<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StackoverflowAPI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_load">show statistics</string>
    <string name="text_view_comments">Comments</string>
    <string name="text_view_users">Users</string>
    <string name="text_view_answers">Answers</string>
    <string name="text_view_api_rev">API revision</string>

</resources>
