<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StackoverflowActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_users"
        android:id="@+id/text_view_users"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_comments"
        android:id="@+id/text_view_comments"
        android:layout_below="@+id/text_view_users"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_answers"
        android:id="@+id/text_view_answers"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/text_view_comments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_api_rev"
        android:id="@+id/text_view_api_rev"
        android:layout_below="@+id/text_view_answers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_load"
        android:id="@+id/button_load"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_users_data"
        android:layout_above="@+id/text_view_comments"
        android:layout_alignLeft="@+id/text_view_comments_data"
        android:layout_alignStart="@+id/text_view_comments_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_comments_data"
        android:layout_above="@+id/text_view_answers"
        android:layout_alignLeft="@+id/text_view_answers_data"
        android:layout_alignStart="@+id/text_view_answers_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_answers_data"
        android:layout_above="@+id/text_view_api_rev"
        android:layout_alignLeft="@+id/text_view_api_rev_data"
        android:layout_alignStart="@+id/text_view_api_rev_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_api_rev_data"
        android:layout_alignBottom="@+id/text_view_api_rev"
        android:layout_toRightOf="@+id/text_view_api_rev"
        android:layout_toEndOf="@+id/text_view_api_rev"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp" />
</RelativeLayout>
